@@ -1,6 +1,7 @@
 package dashboards
 
 import (
+	"context"
 	"errors"
 	"fmt"
 	"path/filepath"
@@ -24,6 +25,7 @@ const (
 // via the kibana dashboard loader plugin. For older versions of the Elastic Stack
 // we write the dashboards directly into the .kibana index.
 func ImportDashboards(
+	ctx context.Context,
 	beatName, hostname, homePath string,
 	kibanaConfig, esConfig, dashboardsConfig *common.Config,
 	msgOutputter MessageOutputter,
@@ -102,16 +104,16 @@ func ImportDashboards(
 	case importViaES:
 		return ImportDashboardsViaElasticsearch(esLoader)
 	case importViaKibana:
-		return setupAndImportDashboardsViaKibana(hostname, kibanaConfig, &dashConfig, msgOutputter)
+		return setupAndImportDashboardsViaKibana(ctx, hostname, kibanaConfig, &dashConfig, msgOutputter)
 	default:
 		return errors.New("Elasticsearch or Kibana configuration missing for loading dashboards.")
 	}
 }
 
-func setupAndImportDashboardsViaKibana(hostname string, kibanaConfig *common.Config,
+func setupAndImportDashboardsViaKibana(ctx context.Context, hostname string, kibanaConfig *common.Config,
 	dashboardsConfig *Config, msgOutputter MessageOutputter) error {
 
-	kibanaLoader, err := NewKibanaLoader(kibanaConfig, dashboardsConfig, hostname, msgOutputter)
+	kibanaLoader, err := NewKibanaLoader(ctx, kibanaConfig, dashboardsConfig, hostname, msgOutputter)
 	if err != nil {
 		return fmt.Errorf("fail to create the Kibana loader: %v", err)
 	}
